--- a/templates/laptop.html
+++ b/templates/laptop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список Ноутбуков и ПК</title>
+
 </head>
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f2f2f2;">
 
@@ -20,9 +21,9 @@
 <section class="shop-laptop" style="display: flex; flex-wrap: wrap;">
     <article class="shop" style="width: 200px; margin: 10px; background-color: #fff; border-radius: 5px; padding: 10px; box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);">
         {% for laptop in laptops %}
-            <a href="{% url 'laptop' shop.id %}"><img src="{{ shop.image.url }}" alt="Подробнее" style="width: 100%; height: auto; border-radius: 5px;"></a>
-            <h2 style="font-size: 18px; margin-top: 10px;">Название ноутбука: {{ shop.name }}</h2>
-            <p style="font-size: 14px; margin: 5px 0;"> Цена продукта: {{ shop.price }}</p>
+            <a href="{% url 'detail' laptop.id %}"><img src="http://127.0.0.1:8000/media/laptop/IMG_20240120_215411.jpg" alt="Подробнее" style="width: 50%; height: auto; border-radius: 5px;"></a>
+            <h2 style="font-size: 18px; margin-top: 10px;">Название ноутбука: {{ laptop.name }}</h2>
+            <p style="font-size: 15px; margin: 5px 0;"> Цена продукта: {{ laptop.price }}</p>
         {% endfor %}
         <!-- Другая информация о фильме -->
     </article>
